package war;

public interface Attack {
    public void toAttack();
}
