package war;

public class Cannon implements Attack {
    @Override
    public void toAttack() {
        System.out.println("Fire with cannon");
    }
}
