package war;

public class Firegun implements Attack {
    @Override
    public void toAttack() {
        System.out.println("Fire with Firegun");
    }
}
