package war;

public class Fly implements Movements {
    @Override
    public void toMove() {
        System.out.println("flying");
    }
}
